app/page.module.css
.flex-row {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  height: 100vh;
  text-align: center;
}

.left-text {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.title {
  font-size: 3rem;
  font-weight: 700;
  margin: 0;
  padding: 0;
  color: #fff;
  padding: .5em;
}

.link {
  position: relative;
  display: inline-block;
  text-decoration: none;
  color: inherit;
  overflow: hidden;
  vertical-align: middle; /* Add this property */
  color: rgb(34 197 94);
  line-height: 1.5; /* Add this property */
  /* negative margin to move the link upwards */
  margin-top: -0.15em;
}

.link:hover::after {
  width: 100%;
}

.link::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 0.1em;
  background-image: linear-gradient(to right, rgb(34 197 94), rgb(34 197 94));
  transition: width 0.3s ease;
}

.description {
  font-size: 1.5rem;
  font-weight: 400;
  margin: 0;
  padding: 0;
  color: #fff;
}

.art {
  border-radius: 5%;
}

.button {
  background-color: rgb(0, 0, 0);
  color: #fff;
  border-radius: 5px;
  border: 1px solid #fff;
  /* padding left right 1em, top bottom .5 em */
  padding: 0.5em 1em;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  transition: 0.3s;
  margin: 2em;
}

.button:hover {
  color: rgb(34 197 94);
  border-color:rgb(34 197 94);
}

/* on mobile */
@media (max-width: 600px) {
  .title {
    padding: 0em;
  }

  .flex-row {
    flex-direction: column;
    
  }

  .description {
    font-size: 1rem;
  }

  .left-text {
    width: 100%;
  }

  .image {
    width: 100%;
    margin-top: -10rem;
  }

  .button {
    margin: 0em;
    margin-top: 1.25em;
  }
}

